--- a/WinMacro/WinMacro.csproj
+++ b/WinMacro/WinMacro.csproj
@@ -58,7 +58,7 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="LLHook">
-      <HintPath>..\..\LLHook\LLHook\bin\Debug\LLHook.dll</HintPath>
+      <HintPath>..\..\..\Visual Studio 15\Projects\LLHook\LLHook\bin\Debug\LLHook.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Microsoft.Dynamic, Version=1.1.0.20, Culture=neutral, PublicKeyToken=7f709c5b713576e1, processorArchitecture=MSIL">
